rust-examples/tests/compile-fail/Rule_4_1.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let s1 = "\x41g";
    println!("s1: {}", s1); // "Ag"
}
